Add favicon and meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="utf-8">
 	<title>Amelie Boulangerie</title>
 	<link href="styles.css" rel="stylesheet">
+	<meta name="author" content="Sheila Dimitriadis">
+	<meta name="description"
+		content="Amelia Boulangerie, a delightful online haven for macaron aficionados, blends the artistry of French pastry with the ambiance of live music. Indulge in a symphony of flavors as you explore an exquisite array of macarons, meticulously crafted to perfection. Elevating your experience, Amelia's enchanting blend of flavored coffees and teas add a harmonious touch to your sensory journey. Immerse yourself in the melodies of live music that grace the bakery's virtual stage, enhancing each visit with aural delight. Discover the perfect fusion of culinary elegance and musical enchantment at Amelia Boulangerie, where delectable treats and harmonious notes unite.">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
